--- a/moviedb/templates/movie_edit.html
+++ b/moviedb/templates/movie_edit.html
@@ -1,8 +1,10 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% load crispy_forms_filters %} {% load crispy_forms_tags %}{% block content %}
 <div class="row">
   <div class="col-12">
     <form action="" method="POST">
-      {% csrf_token %} {{form.as_p}}
+      {% csrf_token %}
+           {{ form|crispy }}
       <input type="submit" name="Submit" />
     </form>
   </div>
