--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col-12 px-0">
       <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'index' %}">
           <img src="https://flixanity.app/templates/flixanity/assets/images/logo_old_flix.png" width="125" height="42"
             class="d-inline-block align-top" alt="">
         </a>
