--- a/moviedb/templates/create_user.html
+++ b/moviedb/templates/create_user.html
@@ -1,12 +1,32 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
+<div class="row justify-content-center">
+  <div class="col-6 py-3">
+    <!-- <h2>Create User</h2>
+    <form method="post">
+      {% csrf_token %}
+      {{ form | crispy}}
+      <button class="btn btn-primary" type="submit">Sign Up</button>
+    </form> -->
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Create User</h5>
+        <form method="post">
+          {% csrf_token %}
+          {{ form | crispy}}
+          <button class="btn btn-primary" type="submit">Create</button>
+        </form>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6> -->
+        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+        <!-- <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a> -->
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
