--- a/moviedb/templates/logged_out.html
+++ b/moviedb/templates/logged_out.html
@@ -1,8 +1,13 @@
 {% block content %}
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">You aren't logged in!</h1>
-    <p class="lead">Login using button on navbar.</p>
-  </div>
+<div class="jumbotron">
+  <!-- <div class="container"> -->
+  <h1 class="display-4">You aren't logged in!</h1>
+  <p class="lead">Please
+    <a href="{% url 'login' %}">
+
+      Login
+    </a>
+    to continue.</p>
+  <!-- </div> -->
 </div>
 {% endblock %}
