--- a/moviedb/templates/movieDetail.html
+++ b/moviedb/templates/movieDetail.html
@@ -6,44 +6,68 @@
 
   <div class="row">
     <div class="col-12">
-      <h2>
-        {{ movie.name }}
-      </h2>
-      <iframe width="100%" height="525" src="{{movie.video_url}}" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+      <div class="card my-3">
+        <div class="card-body">
+          <h3 class="card-title">
+            {{ movie.name }}
+          </h3>
+          <iframe width="100%" height="525" src="{{movie.video_url}}" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-3">
-      <h5>Category:</h5>
-      {{ movie.genre }}
-      <h5>Summary:</h5>
-      {{ movie.long_des }}
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Summary:</h5>
+          {{ movie.long_des }}
+          <h5 class="card-title  mt-3">Category:</h5>
+          {{ movie.genre }}
+        </div>
+      </div>
     </div>
     <div class="col-4">
-      <h3>Reviews</h3>
-      {% if reviews %}
-      <h5>Average: {{ avg_rating.rating__avg}}</h5>
-      {% for review in reviews %}
-      <p>{{ review.user }}
-        {{ review.rating }}
-        {{ review.text }}</p>
-      {% endfor %}
-      {% else %}
-      <p>No reviews are available.</p>
-      {% endif %}
+      <div class="card">
+        <div class="card-body">
+          {% if reviews %}
+          <h5 class="card-title">Rating: {{ avg_rating.rating__avg}}</h5>
+          {% endif %}
+          <h5 class="card-title">Reviews</h5>
+          {% if reviews %}
+          {% for review in reviews %}
+          <div class="card">
+            <div class="card-body">
+              <h6 class="card-title">{{ review.rating }} - {{ review.text }}</h6>
+              <!-- <p class="card-text">{{ review.text }}</p> -->
+              <small class="card-subtitle mb-2 text-muted">{{ review.user }}</small>
+            </div>
+          </div>
+          {% endfor %}
+          {% else %}
+          <p>No reviews are available.</p>
+          {% endif %}
+        </div>
+      </div>
     </div>
     <div class="col-5">
-      {% if already_reviewed %}
-      <h4>Edit Review</h4>
-      {% else %}
-      <h4>Write Review</h4>
-      {% endif %}
-      <form action="" method="POST">
-        {% csrf_token %} {{form | crispy}}
-        <input type="submit" name="Submit" />
-      </form>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">
+            {% if already_reviewed %}
+            Edit Review
+            {% else %}
+            Write Review
+            {% endif %}
+          </h5>
+          <form action="" method="POST">
+            {% csrf_token %} {{form | crispy}}
+            <input class="btn btn-light" type="submit" name="Submit" />
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
