--- a/moviedb/templates/movie_edit.html
+++ b/moviedb/templates/movie_edit.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
 {% load crispy_forms_filters %} {% load crispy_forms_tags %}{% block content %}
-<div class="row">
-  <div class="col-12">
-    <form action="" method="POST">
-      {% csrf_token %}
-           {{ form|crispy }}
-      <input type="submit" name="Submit" />
-    </form>
+<div class="row justify-content-center">
+  <div class="col-6 py-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Edit</h5>
+        <form action="" method="POST">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <input class="btn btn-primary" type="submit" name="Submit" />
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
