--- a/moviedb/templates/user_delete.html
+++ b/moviedb/templates/user_delete.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row">
   <div class="col-12">
+    <p class="display-4"> Are you sure you want to delete {{ user.username }}? </p>
     <form action="" method="POST">
       {% csrf_token %}
-      <input type="submit" name="Delete" />
+      <input class="btn btn-lg btn-danger" type="submit" value="Delete" />
+      <a class="btn btn-lg btn-primary" href="{% url 'adminpanel' %}">Cancel</a>
     </form>
   </div>
 </div>
