--- a/moviedb/templates/user_edit.html
+++ b/moviedb/templates/user_edit.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 {% load crispy_forms_filters %} {% block content %}
-<div class="row">
-  <div class="col-12">
-    <form action="" method="POST">
-      {% csrf_token %} {{form|crispy}}
-      <input type="submit" name="Submit" />
-    </form>
+<div class="row justify-content-center">
+  <div class="col-8">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Edit User</h5>
+        <form action="" method="POST">
+          {% csrf_token %} {{form|crispy}}
+          <input class="btn btn-primary" type="submit" name="Submit" value="Save" />
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
