--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,6 @@
           Hi {{ user.username }}!
           <p><a href="{% url 'logout' %}">Log Out</a></p>
           {% else %}
-          <p>You are not logged in</p>
           <a href="{% url 'login' %}">Log In</a>
           {% endif %}
         </span>
@@ -36,7 +35,7 @@
       </nav>
     </div>
   </div>
-  <div class="container-fluid">
+  <div class="container">
 
     <main>
       {% block content %}
