--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,16 +1,21 @@
 <!-- templates/registration/login.html -->
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% block content %}
 <div class="container">
-  <div class="row py-4">
-    <div class="col-12">
-      <h2>Log In</h2>
-      <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Log In</button>
-      </form>
+  <div class="row justify-content-center py-4">
+    <div class="col-5">
+      <div class="card">
+        <div class="card-body">
+          <h2>Log In</h2>
+          <form method="post">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <button type="submit" class="btn btn-primary">Log In</button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
