cleaned code & removed comments.

--- a/moviedb/templates/logged_out.html
+++ b/moviedb/templates/logged_out.html
@@ -1,13 +1,6 @@
 {% block content %}
 <div class="jumbotron">
-  <!-- <div class="container"> -->
   <h1 class="display-4">You aren't logged in!</h1>
-  <p class="lead">Please
-    <a href="{% url 'login' %}">
-
-      Login
-    </a>
-    to continue.</p>
-  <!-- </div> -->
+  <p class="lead">Please <a href="{% url 'login' %}">Login</a> to continue.</p>
 </div>
 {% endblock %}
